# crusts

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  install_crown.sh  run.sh  vendor.yml
.github/workflows/: benchmarks.yaml  check.yaml  test.yml  verify.yaml
bench/: .gitignore  Makefile.input
benchmark/: all_in_one.sh  benchmark.sh  cargo_check.sh  cargo_check_clippy.sh  clippy.sh  clippy_fix.sh  compute_KLOC.sh  crusts.sh  crusts_par.sh  unsafe.sh
benchmark/mad_libs/: madlibs.tst
benchmark/prime_decomposition/: .gitignore
benchmark1/: Makefile.output  benchmark.sh
benchmark1/floyds_triangle/i/: main.c
benchmark1/write_a_ppm_file/: .gitignore
benchmark2/: benchmark.sh  run.sh
benchmark2/metrics/brotli/original/: metrics.json
src/: auto_curs.rs  c2rust.rs  cli.rs  constants.rs  crown.rs  crusts.rs  main.rs  metrics.rs  utils.rs
tests/test_c2rust/: Makefile  compile_commands.json  lib.rs  main.c
tests/test_c2rust/src/: main.rs
txl_rules/: CFmt2RustFmt.x  array.x  atoi.x  const2mut.x  errnoLocation.x  fn.x  formalizeCode.x  main.x  null.x  rm_option_warn.x  rs.x  scrust_demo.x  stdio.x  time.x  txl  unsafe.x  varTypeNoBounds.x  warns.x
utils/: cargo-clippy
