[package]
name = "crusts"
version = "0.0.3"
edition = "2021"
authors = [
    "Michael Ling <michael.ling@huawei.com>",
    "Yijun Yu <y.yu@open.ac.uk>",
    "Haitao Wu <haitao.wu@huawei.com>",
    "Yuan Wang <yuan.wang@huawei.com>",
    "James R. Cordy <cordy@cs.queensu.ca>",
    "Ahmed E. Hassan <hassan@queensu.ca>",
]
description = "CRustS - From Unsafe C to safer Rust"
repository = "https://github.com/trusted-programming/crusts"
documentation = "https://docs.rs/crusts"
keywords = ["rust", "c2rust", "refactoring"]
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking"] }
jwalk = "0.8"
flate2 = "1.0.25"
tar = "0.4.38"
clap = { version = "4.2.2", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
dirs = "5.0.0"

[dev-dependencies]
insta = "1.24.1"
serial_test = "2.0.0"
